Introduce Minio as object storage